--- a/sesion06/bulma-dashboard/src/views/dashboard.html
+++ b/sesion06/bulma-dashboard/src/views/dashboard.html
@@ -28,7 +28,7 @@
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
           <div class="navbar-link">
-            Ethien Salinas
+            Richie Cedillo
           </div>
           <div class="navbar-dropdown">
             <a class="navbar-item">
