[add] Configg doughnut chart

--- a/sesion07/bootstrap-dashboard/src/views/index.html
+++ b/sesion07/bootstrap-dashboard/src/views/index.html
@@ -92,11 +92,53 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-4 col-lg-5">
+     <!--  <div class="col-xl-4 col-lg-5">
         <div class="card-header">Chart2.js</div>
           <div class="card-body">
             <canvas id="Chart2" width="1000" height="850"></canvas>
           </div>
+      </div> -->
+      <div class="col-xl-4 col-lg-5">
+        <div class="card">
+          <div class="card-header">Doughnut Chart.js</div>
+          <div class="card-body">
+            <canvas id="myDoughnutChart"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 mb-4">
+        <div class="card mb-4">
+          <div class="card-header py-3">
+            <h3 class="m-0 text-primary">Proyectos</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="small font-weight-bold">Migración de Servidores <span class="float-right">30%</span></h4>
+            <div class="progress">
+              <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            
+            <h4 class="small font-weight-bold">Registro de ventas <span class="float-right">60%</span></h4>
+            <div class="progress">
+              <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h4 class="small font-weight-bold">Configuración de cuentas <span class="float-right">90%</span></h4>
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card mb-4">
+          <div class="card-header py-3">Lineamientos de desarrollo</div>
+          <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo facere nemo cupiditate cum ut omnis ipsa dicta tempore cumque expedita est neque qui, optio alias deserunt sunt odit sapiente debitis?
+          </div>
+        </div>
       </div>
     </div>
     <!-- [end] page content -->
