--- a/sesion07/bootstrap-dashboard/src/views/index.html
+++ b/sesion07/bootstrap-dashboard/src/views/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-3 col-md-6">
+      <div class="col-xl-3 col-md-6 mb-4">
         <div class="card">
           <div class="card-body">
             <div class="row align-items-center">
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-md-6">
+      <div class="col-xl-3 col-md-6 mb-4">
         <div class="card">
           <div class="card-body">
             <div class="row align-items-center">
@@ -51,12 +51,12 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-md-6">
+      <div class="col-xl-3 col-md-6 mb-4">
         <div class="card">
           <div class="card-body">
             <div class="row align-items-center">
               <div class="col mr-2">
-                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">tareas</div>
+                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tareas</div>
                 <div class="h5 mb-0 font-weight-bold text-gray-800">$57888</div>
               </div>
               <div class="col-auto">
@@ -66,7 +66,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-md-6">
+      <div class="col-xl-3 col-md-6 mb-4">
         <div class="card">
           <div class="card-body">
             <div class="row align-items-center">
@@ -84,7 +84,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xl-8 col-lg-7">
+      <div class="col-xl-8 col-lg-7 mb-4">
         <div class="card">
           <div class="card-header">Chart.js</div>
           <div class="card-body">
@@ -98,7 +98,7 @@
             <canvas id="Chart2" width="1000" height="850"></canvas>
           </div>
       </div> -->
-      <div class="col-xl-4 col-lg-5">
+      <div class="col-xl-4 col-lg-5 mb-4">
         <div class="card">
           <div class="card-header">Doughnut Chart.js</div>
           <div class="card-body">
@@ -140,6 +140,70 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-primary">
+          <div class="card-body">
+            Primary
+            <div class="text-white-50 small">
+              #4e73df
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-success">
+          <div class="card-body">
+            Success
+            <div class="text-white-50 small">
+              #1cc88a
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-info">
+          <div class="card-body">
+            Info
+            <div class="text-white-50 small">
+              #36b9cc
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-warning">
+          <div class="card-body">
+            Warning
+            <div class="text-white-50 small">
+              #f6c23e
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-danger">
+          <div class="card-body">
+            Danger
+            <div class="text-white-50 small">
+              #e74a3b
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 mb-4">
+        <div class="card bg-dark">
+          <div class="card-body">
+            Dark
+            <div class="text-white-50 small">
+              #5a5c69
+            </div>
+          </div>
+        </div>
+      </div>
+     
     </div>
     <!-- [end] page content -->
   </div>
