--- a/sesion08/beginning-with-react/src/css/style.css
+++ b/sesion08/beginning-with-react/src/css/style.css
@@ -1,5 +1,41 @@
+*{
+    --primary: #07038C;
+    --background-color: #0439D9;
+}
 body{
     background-color: #003B74;
     color: whitesmoke;
     font-family: 'Baloo Tamma 2', cursive;
+}
+
+nav{
+    max-width: 21rem;
+    background-color: #6000BF;
+    font-size: large;
+    margin-left: 3rem;
+}
+nav ul{
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav ul li{
+    padding: .3rem .9rem;
+}
+nav ul li a{
+    display: inline-block;
+    min-width: 15rem;
+    background-color: azure;
+    color: grey;
+    border: .3rem solid rgb(9, 89, 164);
+    border-radius: .3rem;
+    padding: .3rem .6rem; 
+    text-decoration: none;
+    margin-left: .6rem;
+}
+nav ul li a:hover{
+    background-color: rgb(9, 89, 164);
+    color: white;
 }
