[add] Functional components

--- a/sesion08/beginning-with-react/src/template/2.1-functional-component.html
+++ b/sesion08/beginning-with-react/src/template/2.1-functional-component.html
@@ -18,39 +18,37 @@
   <a onclick="window.history.back()">Go Back</a>
 
   <script type="text/babel">
-    class ReactClassComponent extends React.Component {
-      render() {
-        const msg = "React class component"
-        return (
-          <div>
-            <h3>{msg}</h3>
-            <InnerClassComponent1/>
-            <InnerClassComponent2/>
-          </div>
-        )
-      }
+    const ReactFunctionalComponent = () => {
+      const msg = "React class component"
+      return (
+        <div>
+          <h3>{msg}</h3>
+          <InnerFunctionalComponent1 />
+          <InnerFunctionalComponent2 />
+        </div>
+      )
     }
-    class InnerClassComponent1 extends React.Component {
-      render() {
-        return (
-          <div>
-            <h3>Inner class component 1</h3>
-          </div>
-        )
-      }
+    const InnerFunctionalComponent1 = () => {
+      const msg = "Inner functional component 1"
+      return (
+        <div>
+          <h3>{msg}</h3>
+        </div>
+      )
     }
-    class InnerClassComponent2 extends React.Component {
-      render() {
-        return (
-          <div>
-            <h3>Inner class component 2</h3>
-            <p>composed by two tags</p>
-          </div>
-        )
-      }
+    const InnerFunctionalComponent2 = () => {
+      const msg = "Inner functional component 2"
+      return (
+        <div>
+          <h3>{msg}</h3>
+          <p>composed by two tags</p>
+        </div>
+      )
     }
+
+
     ReactDOM.render(
-      <ReactClassComponent />,
+      <ReactFunctionalComponent />,
       document.querySelector('#root')
     )
   </script>
