--- a/sesion08/beginning-with-react/src/template/1-hello-jsx.html
+++ b/sesion08/beginning-with-react/src/template/1-hello-jsx.html
@@ -7,6 +7,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.1/umd/react.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.1/umd/react-dom.production.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
   <link rel="stylesheet" href="../css/style.css">
 
   <title>Hello world react</title>
@@ -16,6 +17,7 @@
   <a onclick="window.history.back()">Go back</a>
   <div id="root"> </div>
   <script type="text/babel">
+
     ReactDOM.render(
       //React.createElement('h3', null, 'React Hello World with JSX'),
       <h3>React Hello World with JSX</h3>,
