--- a/sesion08/beginning-with-react/src/css/style.css
+++ b/sesion08/beginning-with-react/src/css/style.css
@@ -35,6 +35,7 @@ nav ul li a{
     padding: .3rem .6rem; 
     text-decoration: none;
     margin-left: .6rem;
+    margin-right: .6rem;
 }
 nav ul li a:hover{
     background-color: rgb(9, 89, 164);
