--- a/sesion13/vue-hello-world/src/css/styles.css
+++ b/sesion13/vue-hello-world/src/css/styles.css
@@ -1,6 +1,6 @@
 * {
   --body-background-color: dodgerblue;
-  --nav-background-color: orange;
+  --nav-background-color: #6A12E8;
 }
 body {
   background-color: var(--body-background-color);
